Cambios en las prestaciones, ahora son comparables